fixed display width on smallest screen sizes (360px) in the home page

--- a/styles/about.css
+++ b/styles/about.css
@@ -431,3 +431,29 @@ h5 {
     justify-content: center;
   }
 }
+
+@media only screen and (max-width: 360px) and (max-width: 545px) {
+  .about-text {
+    width: 20rem;
+  }
+
+  .past-congress {
+    /* margin-left: 0;
+    margin-right: 6rem; */
+    width: 100%;
+    /* height: 20rem; */
+    border: 2px solid green;
+  }
+
+  .buea-2014 {
+    width: 20rem;
+    height: 20rem;
+    margin-right: 0;
+  }
+
+  .douala-2017 {
+    width: 20rem;
+    height: 20rem;
+    margin-right: 0;
+  }
+}
