--- a/styles/styles.css
+++ b/styles/styles.css
@@ -491,10 +491,6 @@ h5 {
 }
 
 @media only screen and (max-width: 360px) and (max-width: 545px) {
-  body {
-    /* overflow-x: hidden; */
-  }
-
   .mobile-mobile {
     display: flex;
     flex-direction: column;
